force-app/main/default/objects/zold_Budget_SK_Branch__c/zold_Budget_SK_Branch__c.object-meta.xml
<CustomObject>
    <description>Safety Branch Budget by Line of Business</description>
    <label>zold_Budget SK Branch</label>
    <nameField>
        <label>Budget Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>zold_Budget SK Branch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>