force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Branch_and_LOB__c.field-meta.xml
<CustomField>
    <fullName>Branch_and_LOB__c</fullName>
    <formula>Branch__r.Branch_Code__c +&apos;-&apos;+  ProductID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch and LOB</label>
    <type>Text</type>
</CustomField>