force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_01_January__c.field-meta.xml
<CustomField>
    <fullName>Budget_01_January__c</fullName>
    <label>Budget 01 Jan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>