force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_02_February__c.field-meta.xml
<CustomField>
    <fullName>Budget_02_February__c</fullName>
    <label>Budget 02 Feb</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>