force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_03_March__c.field-meta.xml
<CustomField>
    <fullName>Budget_03_March__c</fullName>
    <label>Budget 03 March</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>