force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_04_April__c.field-meta.xml
<CustomField>
    <fullName>Budget_04_April__c</fullName>
    <label>Budget 04 April</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>