force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_05_May__c.field-meta.xml
<CustomField>
    <fullName>Budget_05_May__c</fullName>
    <label>Budget 05 May</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>