force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_06_June__c.field-meta.xml
<CustomField>
    <fullName>Budget_06_June__c</fullName>
    <label>Budget 06 June</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>