force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_07_July__c.field-meta.xml
<CustomField>
    <fullName>Budget_07_July__c</fullName>
    <label>Budget 07 July</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>