force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_08_August__c.field-meta.xml
<CustomField>
    <fullName>Budget_08_August__c</fullName>
    <label>Budget 08 Aug</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>