force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_09_September__c.field-meta.xml
<CustomField>
    <fullName>Budget_09_September__c</fullName>
    <label>Budget 09 Sep</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>