force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_10_October__c.field-meta.xml
<CustomField>
    <fullName>Budget_10_October__c</fullName>
    <label>Budget 10 Oct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>