force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_11_November__c.field-meta.xml
<CustomField>
    <fullName>Budget_11_November__c</fullName>
    <label>Budget 11 Nov</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>