force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_12_December__c.field-meta.xml
<CustomField>
    <fullName>Budget_12_December__c</fullName>
    <label>Budget 12 Dec</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>