force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Budget_Total__c.field-meta.xml
<CustomField>
    <fullName>Budget_Total__c</fullName>
    <formula>Budget_01_January__c
+ Budget_02_February__c
+ Budget_03_March__c
+ Budget_04_April__c
+ Budget_05_May__c
+ Budget_06_June__c
+ Budget_07_July__c
+ Budget_08_August__c
+ Budget_09_September__c
+ Budget_10_October__c
+ Budget_11_November__c
+ Budget_12_December__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>