force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to product</description>
    <label>Line of Business</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Budget_SK_Branch</relationshipName>
    <type>Lookup</type>
</CustomField>