force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Quota_Lube_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Quota_Lube_Bulk__c</fullName>
    <label>Quota Lube Bulk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>