force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Quota_Oil_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Quota_Oil_Gallons__c</fullName>
    <label>Quota Oil Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>