force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Quota_TPM__c.field-meta.xml
<CustomField>
    <fullName>Quota_TPM__c</fullName>
    <label>Quota TPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>