force-app/main/default/objects/zold_Budget_SK_Branch__c/fields/Territory_Budget_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Territory_Budget_Distributed__c</fullName>
    <label>Territory Budget Distributed</label>
    <summarizedField>zold_Budget_SK_Territory__c.Percent_of_Budget__c</summarizedField>
    <summaryForeignKey>zold_Budget_SK_Territory__c.Branch_and_LOB__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>