force-app/main/default/objects/zold_Budget_SK_Branch__c/recordTypes/SK_Quota_Lube.recordType-meta.xml
<RecordType>
    <fullName>SK_Quota_Lube</fullName>
    <active>true</active>
    <description>Lube Oil Sales Quota</description>
    <label>SK Quota Lube</label>
</RecordType>