force-app/main/default/objects/zold_Budget_SK_Branch__c/recordTypes/SK_Quota_Oil_Gallons.recordType-meta.xml
<RecordType>
    <fullName>SK_Quota_Oil_Gallons</fullName>
    <active>true</active>
    <description>SK Quota Oil Gallons</description>
    <label>SK Quota Oil Gallons</label>
</RecordType>