force-app/main/default/objects/zold_Budget_SK_Branch__c/recordTypes/SK_Quota_TPM.recordType-meta.xml
<RecordType>
    <fullName>SK_Quota_TPM</fullName>
    <active>true</active>
    <description>TPM Quota</description>
    <label>SK Quota TPM</label>
</RecordType>